--- a/webapp/src/pages/about/about.html
+++ b/webapp/src/pages/about/about.html
@@ -7,5 +7,11 @@
 </ion-header>
 
 <ion-content padding>
-
+  <ion-list *ngFor="let result of fakeApiData">
+    <ion-item >
+      <ion-label>
+        Test: {{result.id}} and {{result.name}}
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
