Some design changes

--- a/webapp/src/pages/about/about.html
+++ b/webapp/src/pages/about/about.html
@@ -30,7 +30,7 @@
                   <ion-col col-10>
                       {{result.address}}
                   </ion-col>
-                  <ion-col col-1>
+                  <ion-col col-1 class="visits">
                       {{result.visits}}
                   </ion-col>
               </ion-row>
@@ -38,6 +38,6 @@
 
   </ion-list>
   <ion-fab right bottom>
-    <button ion-fab color="danger"><ion-icon name="add"></ion-icon></button>
+    <button ion-fab color="primary"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
