--- a/webapp/src/pages/locations/locations.html
+++ b/webapp/src/pages/locations/locations.html
@@ -13,6 +13,7 @@
 </ion-header>
 
 <ion-content >
+    <ion-searchbar></ion-searchbar>
   <ion-list *ngFor="let location of locations">
 
           <ion-item class="item" (click)="viewLocation(location)">
