--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -17,6 +17,7 @@
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSwExTI4vQ2nNPGTwPP_sKNiT8nhgxvek&v=3.exp&libraries=places"></script>
 
   <!-- un-comment this code to enable service worker
   <script>
