--- a/webapp/src/pages/gogletest/gogletest.html
+++ b/webapp/src/pages/gogletest/gogletest.html
@@ -9,10 +9,17 @@
   <ion-navbar>
     <ion-title>gogletest</ion-title>
   </ion-navbar>
+  <ion-toolbar color="primary">
+    <ion-searchbar [(ngModel)]="autocomplete.input" (ionInput)="updateSearchResults()" placeholder="Search for a place"></ion-searchbar>
+  </ion-toolbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-list [hidden]="autocompleteItems.length == 0">
+    <ion-item *ngFor="let item of autocompleteItems" tappable (click)="selectSearchResult(item)">
+      {{ item.description }}
+    </ion-item>
+  </ion-list>
 </ion-content>
