--- a/webapp/src/pages/settings/settings.html
+++ b/webapp/src/pages/settings/settings.html
@@ -20,7 +20,7 @@
         <ion-list *ngIf="customApi.authCustomUser.userName">
           <ion-item >
             <ion-label>
-              App authenticaed for user: {{customApi.authCustomUser.userName}}
+              App authenticaed for user: {{customApi.authCustomUser.userName}} ({{customApi.authCustomUser.fullname}})
             </ion-label>
           </ion-item>
         </ion-list>
