--- a/webapp/src/pages/locations/locations.html
+++ b/webapp/src/pages/locations/locations.html
@@ -33,6 +33,6 @@
 
   </ion-list>
   <ion-fab right bottom>
-    <button ion-fab color="primary"><ion-icon name="add"></ion-icon></button>
+    <button ion-fab color="primary" (click)="addLocation()"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
