add and update mostly work now

--- a/webapp/src/pages/add-location/add-location.html
+++ b/webapp/src/pages/add-location/add-location.html
@@ -61,7 +61,7 @@
           <ion-label>Is my return visit</ion-label>
           <ion-toggle [(ngModel)]="location.isReturnVisit" ></ion-toggle>
       </ion-item>
-        <button ion-button type="button" (click)="addLocation(location)" lock>Add User</button>
+        <button ion-button type="button" (click)="addLocation(location)" lock>Add Location</button>
     </ion-list>
 
 </ion-content>
