--- a/webapp/src/pages/location/location.html
+++ b/webapp/src/pages/location/location.html
@@ -8,8 +8,9 @@
     <ion-list>
             <ion-item>
                 <ion-label color="primary" stacked>Address</ion-label>
-                <ion-input type="text" [(ngModel)]="location.formattedAddressString" placeholder="Add address here"></ion-input>
+                <ion-input (click)="showAddressModal(location)" type="text" [(ngModel)]="location.formattedAddressString" placeholder="Add address here"></ion-input>
             </ion-item>
+            <ion-item>{{location.address | json}}</ion-item>
             <ion-item>
                 <ion-label color="primary" stacked>Type</ion-label>
                 <ion-select (ionChange)="onChangeAnything(location)" [(ngModel)]="location.type" placeholder="Choose type">
