--- a/webapp/src/pages/modal-address-autocomplete/addressAutocomplete.html
+++ b/webapp/src/pages/modal-address-autocomplete/addressAutocomplete.html
@@ -11,6 +11,7 @@
         </ion-item>
     </ion-list>
     <button ion-button type="button" (click)="useSelectedAddress()" lock>Use address</button>
+    <button ion-button type="button" (click)="dismiss()" lock>Cancel</button>
     <div id="map" data-tap-disabled="true" style="height: 100% "></div>
 </ion-content>
 
