--- a/webapp/src/pages/settings/settings.html
+++ b/webapp/src/pages/settings/settings.html
@@ -17,10 +17,10 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-list *ngIf="customApi.authCustomUser.userName">
+        <ion-list *ngIf="customApi.authCustomUser.username">
           <ion-item >
             <ion-label>
-              App authenticaed for user: {{customApi.authCustomUser.userName}} ({{customApi.authCustomUser.fullname}})
+              App authenticaed for user: {{customApi.authCustomUser.username}} ({{customApi.authCustomUser.fullname}})
             </ion-label>
           </ion-item>
         </ion-list>
