--- a/webapp/src/pages/locations/locations.html
+++ b/webapp/src/pages/locations/locations.html
@@ -1,15 +1,16 @@
 <ion-header>
-    <ion-navbar>
-        <ion-title text-center>255 Locations</ion-title>
-    </ion-navbar>
-    <ion-row>
-        <ion-col col-6>
-            <ion-icon name="ios-options"></ion-icon>Sort
-        </ion-col>
-        <ion-col col-6>
-            <ion-icon name="ios-funnel"></ion-icon>Filter
-        </ion-col>
-    </ion-row>
+    <ion-toolbar>
+        <ion-buttons start col-6>
+            <button ion-button icon-only>
+                <ion-icon name="create"></ion-icon>
+            </button>
+        </ion-buttons>
+        <ion-buttons end col-6>
+            <button ion-button icon-only>
+                <ion-icon name="more"></ion-icon>
+            </button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content >
