--- a/webapp/src/pages/home/home.html
+++ b/webapp/src/pages/home/home.html
@@ -16,5 +16,6 @@
   </p>
   <p>
       <button (click)="open_googletestpage()">Link to google test</button>
+    <button (click)="open_locations()">Goto locations</button>
   </p>
 </ion-content>
