--- a/webapp/src/pages/home/home.html
+++ b/webapp/src/pages/home/home.html
@@ -1,21 +1,11 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
-  <p>
-      <button (click)="open_googletestpage()">Link to google test</button>
-    <button (click)="open_locations()">Goto locations</button>
-  </p>
+  <h1>JW</h1>
+  <h2>Mallorca Scandinavians</h2>
+  <button ion-button outline (click)="open_locations()">Locations</button>
 </ion-content>
