--- a/webapp/src/pages/home/home.html
+++ b/webapp/src/pages/home/home.html
@@ -7,5 +7,8 @@
 <ion-content padding>
   <h1>JW</h1>
   <h2>Mallorca Scandinavians</h2>
-  <button ion-button outline (click)="open_locations()">Locations</button>
+  <button ion-button icon-left (click)="open_locations()">
+    <ion-icon name="ios-pin"></ion-icon>
+    Locations
+  </button>
 </ion-content>
